--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <footer class="footer" id="patrocinadores">
         <div class="footer__organizan footer--grid">
-            <h3>Organizan: </h3>
+            <h3>Organizan2: </h3>
             <div class="footer__organizan--utrera"></div>
             <div class="footer__organizan--ponce"></div>
             <div class="footer__organizan--junta"></div>
