--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fontawesome-all.min.css">
+
     <link rel="icon" href="img/innicia_icon.ico" type="image/x-icon">
     <title>Hackaton Intercentros</title>
 </head>
@@ -20,11 +22,15 @@
         <a href="#inicio">
             <div class="nav__logo"></div>
         </a>
+        <a href="javascript:void(0);" class="icon" id="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
 
-        <div class="nav__enlaces">
+        <div class="nav__enlaces" id="nav__enlaces">
             <a class="nav__enlaces__boton" href="#apuntate">Apúntate</a>
             <a class="nav__enlaces__boton" href="#info">Info</a>
             <a class="nav__enlaces__boton" href="#patrocinadores">Patrocinadores</a>
+            <a class="nav__enlaces__boton" href="https://www.iesponcedeleon.es/search/label/Innicia">Novedades</a>
         </div>
     </nav>
 
@@ -60,7 +66,17 @@
         </div>
         <div class="main__icono main__icono--premio"></div>
         <div class="main__almuerzo"></div>
-        <div class="main__organiza"></div>
+        <div class="main__organiza">
+            <div class="redes"><a href="https://instagram.com/iesponcedeleon1?utm_medium=copy_link"><i
+                        class="fab fa-instagram"></i></a></div>
+            <div class="redes"><a href="https://www.facebook.com/profile.php?id=100010109194909"><i
+                        class="fab fa-twitter"></i></a></div>
+            <div class="redes"><a href="https://twitter.com/ies_poncedeleon?t=bcVeu00NqtTOUkgCEWHwKA&s=03"><i
+                        class="fab fa-facebook-square"></i></a></div>
+            <div class="redes"><a
+                    href="https://www.google.es/maps/place/Casa+Surga/@37.1833305,-5.7787192,21z/data=!4m5!3m4!1s0xd127f0ea7440cdf:0xf9fa588c67a65cf0!8m2!3d37.1833429!4d-5.7787185?hl=es"><i
+                        class="fas fa-map-marker-alt"></i></a></div>
+        </div>
     </main>
 
     <footer class="footer" id="patrocinadores">
