Juro que este es el último commit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#inicio">
             <div class="nav__logo"></div>
         </a>
-        <a href="javascript:void(0);" class="icon" id="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon" id="toggle__btn" >
             <i class="fa fa-bars"></i>
         </a>
 
